unpackaged/main/default/objects/filegen__Batch_Header_Record__c/filegen__Batch_Header_Record__c.object-meta.xml
<CustomObject>
    <label>Batch Header Record</label>
    <nameField>
        <displayFormat>BHR-{0000000000}</displayFormat>
        <label>Batch Header Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Header Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>