unpackaged/main/default/objects/filegen__Batch_Header_Record__c/fields/filegen__Company_Descriptive_Date__c.field-meta.xml
<CustomField>
    <fullName>filegen__Company_Descriptive_Date__c</fullName>
    <label>Company  Descriptive Date</label>
    <type>Date</type>
</CustomField>