unpackaged/main/default/objects/filegen__Batch_Header_Record__c/fields/filegen__Company_Discretionary_Data__c.field-meta.xml
<CustomField>
    <fullName>filegen__Company_Discretionary_Data__c</fullName>
    <label>Company  Discretionary  Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>