unpackaged/main/default/objects/filegen__Batch_Header_Record__c/fields/filegen__Company_Entry_Description__c.field-meta.xml
<CustomField>
    <fullName>filegen__Company_Entry_Description__c</fullName>
    <label>Company Entry  Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>