unpackaged/main/default/objects/filegen__Batch_Header_Record__c/fields/filegen__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>filegen__Company_Name__c</fullName>
    <label>Company  Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>