unpackaged/main/default/objects/filegen__Batch_Header_Record__c/fields/filegen__Effective_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>filegen__Effective_Entry_Date__c</fullName>
    <label>Effective Entry  Date</label>
    <type>Date</type>
</CustomField>