unpackaged/main/default/objects/filegen__Batch_Header_Record__c/fields/filegen__SEC_Code__c.field-meta.xml
<CustomField>
    <fullName>filegen__SEC_Code__c</fullName>
    <label>SEC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>